*** 3.2.0 / 2007-07-18
+ 1 major enhancement:
  + Automatic activation/deactivation of flash client.
  - Serialized event execution.
+ 5 minor enhancements:
  + shooting_star.yml is processed by ERB.
  + Updated implementation of observers.
  + Added sample chat observer script.
  + Separated views of xhr and flash html into views/.
  + Added an event which will fire when connection is established.
  - Heart beat.
+ 2 minor spec changes:
  + Changed default pid file location from log/ to tmp/pids/.
  + options[:connected] obsoleted.
    Please use options[:event] instead.

*** 3.1.0 / 2007-07-18
+ 1 major enhancement:
  + Added 2 meteor_strike functions 'tuneInOut' and 'tuneOutIn'.

+ 1 minor enhancement:
  + FileUtil is used instead of `shell command`.

+ 1 critical bugfix:
  + Fixed broken `shooting_star init'.

+ 3 minor bugfixes:
  + Corrected initialization order of meteor_strike DOM elements.
  + Managed uncertainty situation of JS/Flash initialization.
  + Applied a patch from Koizuka.

*** 3.0.0 / 2007-06-22
+ 3 major enhancements:
  + Added flush client.
  + Implemented reconnection for flash client.
  + Server side event notification.

+ 2 minor enhancements:
  + Sending policy file in response to flash client's request.
  + Cleaning up source code.

+ 1 major bugfix:
  + Suppressed EBADF while flushing execution buffer.

+ 1 minor bugfix:
  + Closed a hole leaking messages.

+ 2 minor spec changes:
  + send_message returns true if succeeded.
  + Renamed local variable 'channel' to 'channel_path'

*** 2.0.2 / 2007-06-09
+ 1 major enhancement:
  + Added chat generator.

+ 2 minor enhancements:
  + Default client configuration.
  + Changed reconnecting interval from 1 sec to 3 sec.

+ 1 minor bugfix:
  + Suppressed invalid access to closed channel.

*** 2.0.1 / 2007-05-20
+ 1 minor enhancement:
  + Added dependencies of gems.
+ 2 minor bug fix:
  + Corrected an invalid use of logger in models/meteor.rb
  + An overlooked exception came to be caught.
