@@ -18,7 +18,7 @@
   user_list_updater = remote_function(:update => 'user_list',
     :url => {:controller => 'chats', :action => 'user_list'},
     :after => %Q[new Effect.Highlight("user-list", {queue: 'end'})])
-  meteor_strike "simple_chat/chatroom",
+  meteor_strike "simple_chat/chatroom", :debug => true,
     :uid => session[:name], :tag => session[:tags], :noflash => false,
     :event => %Q{
       switch(params.event){
