@@ -5,7 +5,7 @@
   swf_timestamp = File.mtime(swf_path).to_i
 %>
 <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
- codebase="<%= flash_code_base %>" width="0" height="0"
+ codebase="<%= flash_code_base %>" width="300" height="300"
  id="meteor_strike_<%= @meteor_strike %>">
   <param name="allowScriptAccess" value="sameDomain" />
   <param name="FlashVars" value="<%= flash_vars %>" />
@@ -15,7 +15,7 @@
   <param name="devicefont" value="true" />
   <param name="bgcolor" value="#ffffff" />
   <embed src="/meteor_strike.swf?<%= swf_timestamp %>" menu="false"
-   quality="high" devicefont="true" bgcolor="#ffffff" width="0" height="0"
+   quality="high" devicefont="true" bgcolor="#ffffff" width="300" height="300"
    swLiveConnect="true" id="meteor_strike_<%= @meteor_strike %>"
    name="meteor_strike_<%= @meteor_strike %>" flashvars="<%= flash_vars %>"
    allowScriptAccess="sameDomain" type="application/x-shockwave-flash"
