@@ -1,4 +1,9 @@
-<div style="position: absolute; top: -99999px; left: -99999px">
+<div style="position: absolute;
+  <%- if options[:debug] -%>
+    top: 0px; right: 0px;
+  <%- else -%>
+    top: -99999px; left: -99999px;
+  <%- end -%>">
   <iframe id="<%= iframe_id %>" name="<%= iframe_id %>"></iframe>
   <form id="<%= iframe_id %>-form" target="<%= iframe_id %>" method="POST"
     action="http://<%= shooting_star_uri %>">
@@ -66,7 +71,7 @@
         var tags = Array.prototype.without.apply(TAGS, tagsOut);
         ms.update(UID, tags.concat(tagsIn || []).uniq());
       };
-      setTimeout(ms.connector = function(){ 
+      /*setTimeout(ms.connector = function(){ 
         if(ms.connection) return;
         var form = $("#{iframe_id}-form");
         form.uid.value = #{uid.to_json};
@@ -75,6 +80,7 @@
         form.submit();
         setTimeout(ms.connector, 3000);
       }, meteorStrike.getFlashVersion() >= 6 ? 3000 : 0);
+      */
     })();
     function meteor_strike_#{@meteor_strike}_DoFSCommand(command, args){
       var ms = meteorStrike[#{channel.to_json}];
